syntax = "proto3";

package aas;

service AasServer {
	rpc remote_attest(stream Msg) returns (stream Msg) {}
	rpc timestamp(TimestampRequest) returns (TimestampResponse) {}
}

message Msg {
	enum MsgType {
		MSG_UNKNOWN = 0;
		SGX_RA_MSG0 = 1;
		SGX_RA_MSG1 = 2;
		SGX_RA_MSG2 = 3;
		SGX_RA_MSG3 = 4;
		SGX_RA_MSG0_REPLY = 5;
		SGX_RA_MSG3_REPLY = 6;
		AAS_RA_REG_REQUEST = 7;
		AAS_RA_REG_REPORT = 8;
		AAS_RA_TCB_UPDATE = 9;
	}
	MsgType msg_type   = 1;
	bytes   msg_bytes  = 2;
}

message TimestampRequest {
	bytes data = 1;
}

message TimestampResponse {
	bytes signed_data = 1;
}
